# MonocularTotalCapture

./: .gitignore  Dockerfile  LICENSE  README.md  download.sh  run_pipeline.sh  run_pipeline_no_ffmpeg.sh  run_processing.sh  run_visualization.sh
FitAdam/: CMakeLists.txt  bvh.cpp  process_results.cpp  pythonWrapper.cpp  run_fitting.cpp  viz_results.cpp
FitAdam/Shaders/: DepthMapRender.fragmentshader  DepthMapRender.vertexshader  Floor.fragmentshader  Floor.vertexshader  Mesh.fragmentshader  Mesh.vertexshader  Mesh_texture.fragmentshader  Mesh_texture.vertexshader  Mesh_texture_shader.fragmentshader  Mesh_texture_shader.vertexshader  NormalMap.fragmentshader  NormalMap.vertexshader  Project2D.fragmentshader  Project2D.vertexshader  ProjectorOnTexture.fragmentshader  ProjectorOnTexture.vertexshader  ProjectorSimulation.fragmentshader  ProjectorSimulation.vertexshader  Selection.fragmentshader  Selection.vertexshader  ShadowMap.vertexshader  SimpleTransform.vertexshader  SimplestShader.fragmentshader  SimplestShader.vertexshader  SingleColor.fragmentshader  StandardLighting.fragmentshader  StandardLighting.vertexshader  TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader
FitAdam/include/: AdamFastCost.h  CMeshModelInstance.h  DCTCost.h  FitCost.h  FitToBody.h  HandFastCost.h  KinematicModel.h  ModelFitter.h  Renderer.h  SGSmooth.hpp  VisualizedData.h  handm.h  meshTrackingProj.h  pose_to_transforms.h  simple.h  totalmodel.h  utils.h
FitAdam/model/: adam_v1_plus2.json  correspondences_nofeet.txt  regressor_0n1_root.json
FitAdam/src/: AdamFastCost.cpp  BVHWriter.cpp  CMeshModelInstance.cpp  DCTCost.cpp  FitToBody.cpp  HandFastCost.cpp  KinematicModel.cpp  ModelFitter.cpp  Renderer.cpp  SGSmooth.cpp  handm.cpp  meshTrackingProj.cpp  pose_to_transforms.cpp  simple.cpp  totalmodel.cpp  utils.cpp
POF/: calib.json  collect_openpose.py  save_total_sequence.py  training_PAF_hand.py  training_e2e_PAF.py
POF/data/: Base2DReader.py  BaseReader.py  COCOReader.py  DomeReader.py  DomeReaderTempConst.py  GAneratedReader.py  HumanReader.py  MultiDataset.py  OpenposeReader.py  RHDReader.py  STBReader.py  TempConstReader.py  TsimonDBReader.py  collect_a4.py  collect_crop_hand.py  collect_openpose.py  collect_stb.py  process_MPII_mask.py
POF/nets/: CPM.py
POF/utils/: AdamModel.py  EvalUtil.py  PAF.py  default_PAF_length.py  default_PAF_lengths.json  general.py  handSegNet.py  keypoint_conversion.py  load_ckpt.py  meshWrapper.py  multigpu.py  ops.py  optimization.py  smoothing.py  vis_heatmap3d.py  wrapper_hand_model.py
